samples/_failures_safe/1761344025_44bc1c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_25064c9e.c: In function ‘main’:
./samples/SAFE/__tmp_25064c9e.c:172:28: error: expected ‘)’ at end of input
  172 |         if (process_trigger
      |            ~               ^
      |                            )
./samples/SAFE/__tmp_25064c9e.c:172:9: error: expected declaration or statement at end of input
  172 |         if (process_trigger
      |         ^~
./samples/SAFE/__tmp_25064c9e.c:172:9: error: expected declaration or statement at end of input
